--- a/src/components/pages-blocks/ClientsBlock.astro
+++ b/src/components/pages-blocks/ClientsBlock.astro
@@ -11,7 +11,7 @@ import { Image } from 'astro:assets';
     width={spotlightBgImage.width}
     height={spotlightBgImage.height}
     src={spotlightBgImage}
-    class="absolute left-0 top-0 z-0 w-full"
+    class="absolute left-0 top-0 z-[-1] w-full"
     alt="Spotlight background"
   />
   <div class="container">
