fix: add support for 3x device pixel ratio

--- a/src/components/clients/Client.astro
+++ b/src/components/clients/Client.astro
@@ -10,7 +10,11 @@ export interface Props {
   description?: string;
   logoImg: ImageMetadata;
   id?: string;
-  desktopImg: { default: ImageMetadata; x2?: ImageMetadata };
+  desktopImg: {
+    default: ImageMetadata;
+    x2?: ImageMetadata;
+    x3?: ImageMetadata;
+  };
   mobileImg?: { default: ImageMetadata; x2?: ImageMetadata };
   technologies?: (
     | {
@@ -39,24 +43,25 @@ const {
 } = Astro.props;
 
 const desktopImagesConfig = [
-  desktopImg.x2 && {
-    image: desktopImg.x2,
+  desktopImg.x3 && {
+    image: desktopImg.x3,
     sourceProps: {
       type: 'image/webp',
-      media: '(-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx)',
-    },
-  },
-  desktopImg.x2 && {
-    image: desktopImg.x2,
-    sourceProps: {
-      media: '(min-device-pixel-ratio: 2)',
-      type: 'image/webp',
+      media: '(-webkit-min-device-pixel-ratio: 2.1), (min-resolution: 2.1dppx)',
     },
   },
   {
     image: desktopImg.default,
     sourceProps: {
-      media: '(max-device-pixel-ratio: 1)',
+      media:
+        '(-webkit-max-device-pixel-ratio: 1.25), (max-resolution: 1.25dppx)',
+      type: 'image/webp',
+    },
+  },
+  desktopImg.x2 && {
+    image: desktopImg.x2,
+    sourceProps: {
+      media: '(-webkit-max-device-pixel-ratio: 2), (max-resolution: 2dppx)',
       type: 'image/webp',
     },
   },
@@ -64,26 +69,20 @@ const desktopImagesConfig = [
 const mobileImagesConfig = (
   mobileImg
     ? [
+        {
+          image: mobileImg.default,
+          sourceProps: {
+            media:
+              '(-webkit-max-device-pixel-ratio: 1.25), (max-resolution: 1.25dppx)',
+            type: 'image/webp',
+          },
+        },
         mobileImg.x2 && {
           image: mobileImg.x2,
           sourceProps: {
             type: 'image/webp',
             media:
-              '(-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx)',
-          },
-        },
-        mobileImg.x2 && {
-          image: mobileImg.x2,
-          sourceProps: {
-            media: '(min-device-pixel-ratio: 2)',
-            type: 'image/webp',
-          },
-        },
-        {
-          image: mobileImg.default,
-          sourceProps: {
-            media: '(max-device-pixel-ratio: 1)',
-            type: 'image/webp',
+              '(-webkit-max-device-pixel-ratio: 2), (max-resolution: 2dppx)',
           },
         },
       ].filter(Boolean)
