--- a/src/components/pages-blocks/FirstBlock.astro
+++ b/src/components/pages-blocks/FirstBlock.astro
@@ -5,28 +5,16 @@ import Button from '../Button.astro';
 import ResponsiveImage from '../ResponsiveImage.astro';
 ---
 
-<div
-  id="welcome-block"
-  class="container relative mt-[96px] pb-4 md:mb-[232px] md:mt-[calc(216px+96px)]"
->
-  <div
-    id="welcome-block__text"
-    class="relative z-10 mb-4 opacity-0 md:mb-0 md:w-[60%]"
-  >
-    <h1 class="text-7xl text-white md:text-7xl-desktop">
-      We build software, the Swift way
-    </h1>
-    <div
-      class="mb-12 mt-4 text-xl !font-normal text-white opacity-80 md:text-xl-desktop"
-    >
-      We are an experienced team of software designers and engineers that know
-      how to take ideas from concept to reality.
-    </div>
+<div id="welcome-block" class="container relative mt-[96px] pb-4 md:mb-[232px] md:mt-[calc(216px+96px)]">
+  <div id="welcome-block__text" class="relative z-10 mb-4 opacity-0 md:mb-0 md:w-[60%]">
+    <h1 class="text-7xl text-white md:text-7xl-desktop">We build software, the Swift way</h1>
+    <p class="mb-12 mt-4 text-xl !font-normal text-white opacity-80 md:text-xl-desktop">
+      We are an experienced team of software designers and engineers who take inspiration from the remarkable swift
+      bird. Just as swifts master the skies with unmatched agility, endurance, and precision—spending nearly their
+      entire lives in flight—we seamlessly guide ideas from concept to reality.
+    </p>
     <a class="md:inline-block" href="#footer">
-      <Button
-        classes="h-[58px] md:w-[200px] w-full text-xl md:text-xl-desktop rounded-2lg"
-        >Work with us</Button
-      >
+      <Button classes="h-[58px] md:w-[200px] w-full text-xl md:text-xl-desktop rounded-2lg">Work with us</Button>
     </a>
   </div>
   <ResponsiveImage
